<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:background="#F8F8F8"
            >

            <include layout="@layout/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/include"
                />


            <EditText
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_below="@+id/include"
                android:layout_alignParentLeft="true" />

            <EditText
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/adress"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_below="@+id/editText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_below="@+id/editText2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/editText4"
                android:layout_below="@+id/editText3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pick_date"
                android:id="@+id/textView2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/editText4"
                />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:id="@+id/datePicker"
                android:headerBackground="#01A9DB"
                android:layout_below="@+id/textView2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingLeft="7dp"
                android:text="@string/days"
                android:id="@+id/textView"
                android:layout_below="@+id/datePicker"
                android:layout_alignLeft="@+id/datePicker"
                android:layout_alignStart="@+id/datePicker" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:entries="@array/Pocet_dni_pobytu"
                android:layout_below="@+id/textView"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView" />
            <TextView
                android:paddingLeft="7dp"
                android:textStyle="bold"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose"
                android:id="@+id/textView3"
                android:layout_below="@+id/spinner" />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/breakfast"
                android:id="@+id/checkBox"
                android:buttonTint="#01A9DB"
                android:layout_below="@+id/textView3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/dinner"
                android:id="@+id/checkBox2"
                android:buttonTint="#01A9DB"
                android:layout_below="@+id/textView3"
                android:layout_toRightOf="@+id/checkBox"
                />


            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:id="@+id/toggleButton"
                android:textOff="@string/nonsmoker"
                android:textOn="@string/smoker"
                android:layout_below="@+id/radioGroup" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:drawableRight="@drawable/button_icon_accept"
                android:id="@+id/accept"
                android:layout_below="@+id/toggleButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:drawableRight="@drawable/button_icon_cancel"
                android:id="@+id/reset"
                android:layout_below="@+id/accept"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                android:layout_below="@+id/checkBox"
                android:layout_alignRight="@+id/datePicker"
                android:layout_alignEnd="@+id/datePicker">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_bed"
                    android:id="@+id/radioButton"
                    android:buttonTint="#01A9DB" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/double_bed"
                    android:id="@+id/radioButton2"
                    android:buttonTint="#01A9DB" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/triple_bed"
                    android:id="@+id/radioButton3"
                    android:buttonTint="#01A9DB" />
            </RadioGroup>

        </RelativeLayout>

    </ScrollView>


    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:entries="@array/Drawer_choice"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#f0e7e7"/>
</android.support.v4.widget.DrawerLayout>
